Update Timeseries Endpoint Docs from

--- a/docs/api-reference/timeseries-grouped/blood-oxygen.mdx
+++ b/docs/api-reference/timeseries-grouped/blood-oxygen.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Get Blood Oxygen Grouped Data"
-openapi: "/v2/timeseries/{user_id}/blood_oxygen/grouped"
+openapi: "GET /v2/timeseries/{user_id}/blood_oxygen/grouped"
 ---
 
 <RequestExample>
