--- a/docs/api-reference/timeseries-grouped/body-fat.mdx
+++ b/docs/api-reference/timeseries-grouped/body-fat.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Get Body Fat Grouped Data"
-openapi: "/v2/timeseries/{user_id}/body_fat/grouped"
+openapi: "GET /v2/timeseries/{user_id}/body_fat/grouped"
 ---
 
 <RequestExample>
