--- a/docs/api-reference/timeseries-grouped/calories-active.mdx
+++ b/docs/api-reference/timeseries-grouped/calories-active.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Get Calories Active Grouped Data"
-openapi: "/v2/timeseries/{user_id}/calories_active/grouped"
+openapi: "GET /v2/timeseries/{user_id}/calories_active/grouped"
 ---
 
 <RequestExample>
