--- a/docs/api-reference/timeseries-grouped/calories-basal.mdx
+++ b/docs/api-reference/timeseries-grouped/calories-basal.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Get Calories Basal Grouped Data"
-openapi: "/v2/timeseries/{user_id}/calories_basal/grouped"
+openapi: "GET /v2/timeseries/{user_id}/calories_basal/grouped"
 ---
 
 <RequestExample>
