--- a/docs/api-reference/timeseries-grouped/cholesterol.mdx
+++ b/docs/api-reference/timeseries-grouped/cholesterol.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Get Cholesterol Grouped Data"
-openapi: "/v2/timeseries/{user_id}/cholesterol/grouped"
+openapi: "GET /v2/timeseries/{user_id}/cholesterol/grouped"
 ---
 
 <RequestExample>
