--- a/docs/api-reference/timeseries-grouped/distance.mdx
+++ b/docs/api-reference/timeseries-grouped/distance.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Get Distance Grouped Data"
-openapi: "/v2/timeseries/{user_id}/distance/grouped"
+openapi: "GET /v2/timeseries/{user_id}/distance/grouped"
 ---
 
 <RequestExample>
