--- a/docs/api-reference/timeseries-grouped/electrocardiogram-voltage.mdx
+++ b/docs/api-reference/timeseries-grouped/electrocardiogram-voltage.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Get Electrocardiogram Voltage Grouped Data"
-openapi: "/v2/timeseries/{user_id}/electrocardiogram_voltage/grouped"
+openapi: "GET /v2/timeseries/{user_id}/electrocardiogram_voltage/grouped"
 ---
 
 <RequestExample>
