--- a/docs/api-reference/timeseries-grouped/floors-climbed.mdx
+++ b/docs/api-reference/timeseries-grouped/floors-climbed.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Get Floors Climbed Grouped Data"
-openapi: "/v2/timeseries/{user_id}/floors_climbed/grouped"
+openapi: "GET /v2/timeseries/{user_id}/floors_climbed/grouped"
 ---
 
 <RequestExample>
