--- a/docs/api-reference/timeseries-grouped/glucose.mdx
+++ b/docs/api-reference/timeseries-grouped/glucose.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Get Glucose Grouped Data"
-openapi: "/v2/timeseries/{user_id}/glucose/grouped"
+openapi: "GET /v2/timeseries/{user_id}/glucose/grouped"
 ---
 
 <RequestExample>
