--- a/docs/api-reference/timeseries-grouped/heartrate.mdx
+++ b/docs/api-reference/timeseries-grouped/heartrate.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Get Heartrate Grouped Data"
-openapi: "/v2/timeseries/{user_id}/heartrate/grouped"
+openapi: "GET /v2/timeseries/{user_id}/heartrate/grouped"
 ---
 
 <RequestExample>
