--- a/docs/api-reference/timeseries-grouped/hrv.mdx
+++ b/docs/api-reference/timeseries-grouped/hrv.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Get Hrv Grouped Data"
-openapi: "/v2/timeseries/{user_id}/hrv/grouped"
+openapi: "GET /v2/timeseries/{user_id}/hrv/grouped"
 ---
 
 <RequestExample>
