--- a/docs/api-reference/timeseries-grouped/hypnogram.mdx
+++ b/docs/api-reference/timeseries-grouped/hypnogram.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Get Hypnogram Grouped Data"
-openapi: "/v2/timeseries/{user_id}/hypnogram/grouped"
+openapi: "GET /v2/timeseries/{user_id}/hypnogram/grouped"
 ---
 
 <RequestExample>
