--- a/docs/api-reference/timeseries-grouped/ige.mdx
+++ b/docs/api-reference/timeseries-grouped/ige.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Get Ige Grouped Data"
-openapi: "/v2/timeseries/{user_id}/ige/grouped"
+openapi: "GET /v2/timeseries/{user_id}/ige/grouped"
 ---
 
 <RequestExample>
