--- a/docs/api-reference/timeseries-grouped/respiratory-rate.mdx
+++ b/docs/api-reference/timeseries-grouped/respiratory-rate.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Get Respiratory Rate Grouped Data"
-openapi: "/v2/timeseries/{user_id}/respiratory_rate/grouped"
+openapi: "GET /v2/timeseries/{user_id}/respiratory_rate/grouped"
 ---
 
 <RequestExample>
