--- a/docs/api-reference/timeseries-grouped/steps.mdx
+++ b/docs/api-reference/timeseries-grouped/steps.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Get Steps Grouped Data"
-openapi: "/v2/timeseries/{user_id}/steps/grouped"
+openapi: "GET /v2/timeseries/{user_id}/steps/grouped"
 ---
 
 <RequestExample>
