--- a/docs/api-reference/timeseries-grouped/stress-level.mdx
+++ b/docs/api-reference/timeseries-grouped/stress-level.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Get Stress Level Grouped Data"
-openapi: "/v2/timeseries/{user_id}/stress_level/grouped"
+openapi: "GET /v2/timeseries/{user_id}/stress_level/grouped"
 ---
 
 <RequestExample>
