--- a/docs/api-reference/timeseries-grouped/water.mdx
+++ b/docs/api-reference/timeseries-grouped/water.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Get Water Grouped Data"
-openapi: "/v2/timeseries/{user_id}/water/grouped"
+openapi: "GET /v2/timeseries/{user_id}/water/grouped"
 ---
 
 <RequestExample>
