--- a/docs/api-reference/timeseries-grouped/body-weight.mdx
+++ b/docs/api-reference/timeseries-grouped/body-weight.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Get Body Weight Grouped Data"
-openapi: "/v2/timeseries/{user_id}/body_weight/grouped"
+openapi: "GET /v2/timeseries/{user_id}/body_weight/grouped"
 ---
 
 <RequestExample>
