--- a/docs/api-reference/timeseries-grouped/caffeine.mdx
+++ b/docs/api-reference/timeseries-grouped/caffeine.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Get Caffeine Grouped Data"
-openapi: "/v2/timeseries/{user_id}/caffeine/grouped"
+openapi: "GET /v2/timeseries/{user_id}/caffeine/grouped"
 ---
 
 <RequestExample>
