--- a/docs/api-reference/timeseries-grouped/igg.mdx
+++ b/docs/api-reference/timeseries-grouped/igg.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Get Igg Grouped Data"
-openapi: "/v2/timeseries/{user_id}/igg/grouped"
+openapi: "GET /v2/timeseries/{user_id}/igg/grouped"
 ---
 
 <RequestExample>
