Update Timeseries Endpoint Docs from

--- a/docs/api-reference/timeseries-grouped/blood-oxygen.mdx
+++ b/docs/api-reference/timeseries-grouped/blood-oxygen.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Get Blood Oxygen Grouped Data"
+title: "Blood Oxygen"
 openapi: "GET /v2/timeseries/{user_id}/blood_oxygen/grouped"
 ---
 
