--- a/docs/api-reference/timeseries-grouped/respiratory-rate.mdx
+++ b/docs/api-reference/timeseries-grouped/respiratory-rate.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Get Respiratory Rate Grouped Data"
+title: "Respiratory Rate"
 openapi: "GET /v2/timeseries/{user_id}/respiratory_rate/grouped"
 ---
 
