--- a/docs/api-reference/timeseries-grouped/stress-level.mdx
+++ b/docs/api-reference/timeseries-grouped/stress-level.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Get Stress Level Grouped Data"
+title: "Stress Level"
 openapi: "GET /v2/timeseries/{user_id}/stress_level/grouped"
 ---
 
