Update Timeseries Endpoint Docs from 13fbadf9d032aa9104039a475d0a2b039361a425

--- a/docs/api-reference/timeseries-grouped/blood-oxygen.mdx
+++ b/docs/api-reference/timeseries-grouped/blood-oxygen.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Blood Oxygen"
+title: "Get Blood Oxygen Grouped Data"
 openapi: "GET /v2/timeseries/{user_id}/blood_oxygen/grouped"
 ---
 
