--- a/docs/api-reference/timeseries-grouped/calories-active.mdx
+++ b/docs/api-reference/timeseries-grouped/calories-active.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Calories Active"
+title: "Get Calories Active Grouped Data"
 openapi: "GET /v2/timeseries/{user_id}/calories_active/grouped"
 ---
 
