--- a/docs/api-reference/timeseries-grouped/calories-basal.mdx
+++ b/docs/api-reference/timeseries-grouped/calories-basal.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Calories Basal"
+title: "Get Calories Basal Grouped Data"
 openapi: "GET /v2/timeseries/{user_id}/calories_basal/grouped"
 ---
 
