--- a/docs/api-reference/timeseries-grouped/cholesterol.mdx
+++ b/docs/api-reference/timeseries-grouped/cholesterol.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Cholesterol"
+title: "Get Cholesterol Grouped Data"
 openapi: "GET /v2/timeseries/{user_id}/cholesterol/grouped"
 ---
 
