--- a/docs/api-reference/timeseries-grouped/electrocardiogram-voltage.mdx
+++ b/docs/api-reference/timeseries-grouped/electrocardiogram-voltage.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Electrocardiogram Voltage"
+title: "Get Electrocardiogram Voltage Grouped Data"
 openapi: "GET /v2/timeseries/{user_id}/electrocardiogram_voltage/grouped"
 ---
 
