--- a/docs/api-reference/timeseries-grouped/floors-climbed.mdx
+++ b/docs/api-reference/timeseries-grouped/floors-climbed.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Floors Climbed"
+title: "Get Floors Climbed Grouped Data"
 openapi: "GET /v2/timeseries/{user_id}/floors_climbed/grouped"
 ---
 
