--- a/docs/api-reference/timeseries-grouped/body-weight.mdx
+++ b/docs/api-reference/timeseries-grouped/body-weight.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Body Weight"
+title: "Get Body Weight Grouped Data"
 openapi: "GET /v2/timeseries/{user_id}/body_weight/grouped"
 ---
 
