Mark Dexcom and Whoop guides with BYOO callout

--- a/docs/wearables/guides/whoop.mdx
+++ b/docs/wearables/guides/whoop.mdx
@@ -2,6 +2,10 @@
 title: "Whoop"
 ---
 
+<Info>
+[Bring Your Own OAuth](/wearables/connecting-providers/bring_your_own_oauth) is available for [the Grow and Scale plans](https://tryvital.io/pricing).
+</Info>
+
 ## Connecting Whoop to Vital
 
 Whoop is a [BYOO](/wearables/connecting-providers/bring_your_own_oauth) only provider, so you will need your own app in [Whoop's developer dashboard](https://developer-dashboard.whoop.com/).
