--- a/docs/wearables/guides/dexcom_v3.mdx
+++ b/docs/wearables/guides/dexcom_v3.mdx
@@ -2,6 +2,10 @@
 title: "Dexcom"
 ---
 
+<Info>
+[Bring Your Own OAuth](/wearables/connecting-providers/bring_your_own_oauth) is available for [the Grow and Scale plans](https://tryvital.io/pricing).
+</Info>
+
 ## Connecting Dexcom to Vital
 
 You can connect your dexcom device to vital through Vital Link Widget or programatically like any 
