--- a/docs/api-reference/user/create-user.mdx
+++ b/docs/api-reference/user/create-user.mdx
@@ -26,7 +26,7 @@ const client = new VitalClient({
 });
 
 const data = await client.user.create(
-    '<user_id>'
+    '<client_user_id>'
 );
 ```
 
@@ -40,7 +40,7 @@ client = Vital(
 )
 
 data = client.user.create(
-    user_id="<user_id>"
+    client_user_id="<client_user_id>"
 )
 ```
 
@@ -53,7 +53,7 @@ Vital vital = Vital.builder()
         .environment(Environment.SANDBOX)
         .build();
 
-var data = vital.user().create("<user_id>");
+var data = vital.user().create("<client_user_id>");
 ```
 
 ```go Go
@@ -69,7 +69,7 @@ client := vitalclient.NewClient(
   vitalclient.WithBaseURL(vital.Environments.Sandbox),
 )
 
-response, err := client.User.Create(context.TODO(), "<user_id>")
+response, err := client.User.Create(context.TODO(), "<client_user_id>")
 if err != nil {
   return err
 }
