Update Whoop BYOO callouts

--- a/docs/wearables/connecting-providers/bring_your_own_oauth.mdx
+++ b/docs/wearables/connecting-providers/bring_your_own_oauth.mdx
@@ -3,7 +3,8 @@ title: "Bring Your Own OAuth"
 ---
 
 <Info>
-Bring Your Own OAuth is available for [the Grow and Scale plans](https://tryvital.io/pricing).
+Bring Your Own OAuth (BYOO) is available for [the Grow and Scale plans](https://tryvital.io/pricing).
+Whoop BYOO is available for [the Launch, Grow and Scale plans](https://tryvital.io/pricing).
 </Info>
 
 Vital supports bringing your own OAuth application credentials, so that your user would see the OAuth consent flow
