--- a/docs/wearables/guides/whoop.mdx
+++ b/docs/wearables/guides/whoop.mdx
@@ -3,7 +3,7 @@ title: "Whoop"
 ---
 
 <Info>
-[Bring Your Own OAuth](/wearables/connecting-providers/bring_your_own_oauth) is available for [the Grow and Scale plans](https://tryvital.io/pricing).
+Whoop [Bring Your Own OAuth](/wearables/connecting-providers/bring_your_own_oauth) is available for [the Launch, Grow and Scale plans](https://tryvital.io/pricing).
 </Info>
 
 ## Connecting Whoop to Vital
