Update Event Catalog from 03ab6502a4b706ca29538cedae34501093f0b8d2

--- a/docs/event-catalog/labtest.order.created.mdx
+++ b/docs/event-catalog/labtest.order.created.mdx
@@ -294,9 +294,9 @@ Defines when an Order should be activated, making it a Delayed Order.
 {
   "event_type": "labtest.order.created",
   "data": {
-    "id": "fd97818e-685b-464a-a3ed-2f6ae9a340bf",
-    "team_id": "5a746119-690e-4f32-b2a2-29dc81d15610",
-    "user_id": "72e8e206-2976-4674-8d06-63215010288f",
+    "id": "e8edccd6-89b7-41b8-b7f8-d5559e96b54c",
+    "team_id": "1bb2a485-018c-4792-b1cb-93b1f940ed11",
+    "user_id": "0115bc05-3a37-4237-a64a-b33f366d31bf",
     "patient_details": {
       "dob": "2020-01-01",
       "gender": "male"
@@ -337,11 +337,12 @@ Defines when an Order should be activated, making it a Delayed Order.
       "method": "testkit"
     },
     "sample_id": "123456789",
-    "health_insurace_id": "1fd893e0-2c61-47b9-a484-f754559d4955",
+    "health_insurace_id": "42ae6501-52f1-4ceb-9f6f-c30d9899e752",
     "requisition_form_url": "https://www.example.com",
     "notes": "This is a note",
     "created_at": "2020-01-01T00:00:00Z",
     "updated_at": "2020-01-01T00:00:00Z",
+    "activate_by": "2020-01-01",
     "status": "collecting_sample",
     "events": [
       {
