--- a/docs/wearables/sdks/vital-core.mdx
+++ b/docs/wearables/sdks/vital-core.mdx
@@ -58,3 +58,133 @@ let widgetUrl = await VitalClient.shared.link.createProviderLink(
 Uri widgetUrl = await client.linkWidgetUrl(redirectUrl: "x-vital-app://");
 ```
 </CodeGroup>
+
+## Core SDK Status
+
+You can inspect the status of the Core SDK for troubleshooting, as well as for your own business logic.
+For example, you may reconcile your user session and the Vital SDK sign-in based on the Core SDK status.
+
+The SDK normally reports one of the following status combinations:
+
+| Combinations                                | Auth Scheme         | Remarks |
+| ----                                        | ----                | ---- |
+| _Empty_                                     | N/A                 | The SDK has neither been configured nor an active sign-in. |
+| `Configured`                                | API Key             | The SDK has been configured, but does not have an active sign-in. |
+| `Configured`, `SignedIn` & `UseApiKey`      | API Key             | The active sign-in was done by setting an API Key and a target Vital User ID. |
+| `Configured`, `SignedIn` & `UseSignInToken` | Vital Sign-In Token | The active sign-in was done by setting an API Key and a target Vital User ID. |
+
+### Get the current status
+<CodeGroup>
+  ```swift Native iOS
+  import VitalCore
+
+  let status: VitalClient.Status = VitalClient.status
+  ```
+
+  ```kotlin Native Android
+  import io.tryvital.client.VitalClient
+  import android.content.Context
+
+  val applicationContext: Context
+
+  VitalClient.getOrCreate(applicationContext)
+  val status = VitalClient.status
+  ```
+
+  ```typescript React Native
+  import { VitalCore } from "@tryvital/vital-core-react-native";
+
+  await VitalCore.cleanUp();
+  ```
+
+  ```dart Flutter
+  import 'package:vital_core/vital_core.dart' as vital_core;
+
+  await vital_core.cleanUp();
+  ```
+</CodeGroup>
+
+### Observe status changes over time
+<CodeGroup>
+  ```swift Native iOS
+  import VitalCore
+
+  // Combine Publisher
+  let cancellable = VitalClient.statusDidChange.sink { _ in }
+
+  // AsyncStream
+  Task {
+    for status in VitalClient.statuses {
+      // ...
+    }
+  }
+  ```
+
+  ```kotlin Native Android
+  import io.tryvital.client.VitalClient
+  import android.content.Context
+
+  val applicationContext: Context
+
+  val statuses: Flow<Set<VitalClient.Status>>
+  statuses = VitalClient.statuses(applicationContext)
+
+  val job = statuses
+    .onEach { /** ... **/ }
+    .launchIn(...)
+  ```
+
+  ```typescript React Native
+  import { VitalCore } from "@tryvital/vital-core-react-native";
+
+  VitalCore.observeStatusChange((statuses) => {
+    // ...
+  });
+  ```
+
+  ```dart Flutter
+  import 'package:vital_core/vital_core.dart' as vital_core;
+
+  // NOTE: This stream does not yield the current statuses on listen.
+  Stream<Set<ClientStatus>> statuses;
+  statuses = vital_core.clientStatusStream;
+  ```
+</CodeGroup>
+
+## Get Current Vital User ID
+
+Aside from the Core SDK Status, you can also query the Vital User ID of the signed-in user:
+
+<CodeGroup>
+  ```swift Native iOS
+  import VitalCore
+
+  let userId: String? = VitalClient.currentUserId
+  ```
+
+  ```kotlin Native Android
+  import io.tryvital.client.VitalClient
+  import android.content.Context
+
+  val applicationContext: Context
+
+  VitalClient.getOrCreate(applicationContext)
+  val userId = VitalClient.currentUserId
+  ```
+
+  ```typescript React Native
+  import { VitalCore } from "@tryvital/vital-core-react-native";
+
+  const userId = await VitalCore.currentUserId();
+  ```
+
+  ```dart Flutter
+  import 'package:vital_core/vital_core.dart' as vital_core;
+
+  final userId = await vital_core.currentUserId();
+  ```
+</CodeGroup>
+
+## Reset the SDK (Sign Out)
+
+Refer to [the Sign Out section in the SDK Authentication guide](/wearables/sdks/authentication#sign-out).
