--- a/docs/wearables/sdks/vital-core.mdx
+++ b/docs/wearables/sdks/vital-core.mdx
@@ -71,7 +71,7 @@ The SDK normally reports one of the following status combinations:
 | _Empty_                                     | N/A                 | The SDK has neither been configured nor an active sign-in. |
 | `Configured`                                | API Key             | The SDK has been configured, but does not have an active sign-in. |
 | `Configured`, `SignedIn` & `UseApiKey`      | API Key             | The active sign-in was done by setting an API Key and a target Vital User ID. |
-| `Configured`, `SignedIn` & `UseSignInToken` | Vital Sign-In Token | The active sign-in was done by setting an API Key and a target Vital User ID. |
+| `Configured`, `SignedIn` & `UseSignInToken` | Vital Sign-In Token | The active sign-in was done by consuming a Vital Sign-In Token. |
 
 ### Get the current status
 <CodeGroup>
