Update Timeseries Endpoint Docs from

--- a/docs/api-reference/timeseries-grouped/hypnogram.mdx
+++ b/docs/api-reference/timeseries-grouped/hypnogram.mdx
@@ -3,6 +3,16 @@ title: "Hypnogram"
 openapi: "GET /v2/timeseries/{user_id}/hypnogram/grouped"
 ---
 
+<Card
+  title="View Full Response Schema »"
+  icon="diamond-turn-right"
+  iconType="sharp-solid"
+  color="#F3A712"
+  href="https://api.tryvital.io/redoc#tag/timeseries/operation/get_hypnogram_grouped"
+>
+  The Response section on the page still needs work. Click here to check out the complete schema.
+</Card>
+
 <RequestExample>
 
 ```bash cURL
